--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="index.js"></script>
     <title>Reusable Dialog</title>
 </head>
+
 <body>
     <!-- To do: Add button that Triggers dialog -->
+    <button id="dialog-toggle" onclick="showDialog()">Click Me</button>
+    <div id="display-message"></div>
 </body>
+
 </html>
