Create class for confirmation dialog to make it reusable.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- To do: Add button that Triggers dialog -->
-    <button id="dialog-toggle" onclick="showDialog()">Click Me</button>
+    <button id="dialog-toggle" onclick="firstDialog.showDialog()">Click Me</button>
     <div id="display-message"></div>
 </body>
 
