Add second button with reference to reusable dialog instance and remove console.log from index.js file.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <!-- To do: Add button that Triggers dialog -->
     <button id="dialog-toggle" onclick="firstDialog.showDialog()">Click Me</button>
+    <!-- Added the second button to test reusability of the dialog -->
+    <button id="dialog-toggle" onclick="secondDialog.showDialog()">Click Me</button>
     <div id="display-message"></div>
 </body>
 
